syntax = "proto3";

package sample;

service SampleService{
    rpc sendSample(TakesReq) returns(ReturnRes);
    rpc MongoDbData(Empty) returns (MessageLogResponse);
}
message TakesReq{
    int32 id=1;
}

message ReturnRes{
int32 id=1;
}
message Empty{

}

message Logs{
 
        string _id = 1;
        string wamid = 2;
        string c_id = 3;
        string c_no = 4;
        string mes = 5;
        string dir = 6;
        string st = 7;
        string ca = 8;
        string ua = 9;
        string a_id = 10;
      
} 
message MessageLogResponse {
    repeated Logs message_logs = 1;

  }

  message serverData {
    repeated Logs message_logs = 1;
    int32 time=2;
  }

